<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".admin"
    android:background="@color/back_ground"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bekleniyor..."
                    android:id="@+id/pc_name"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    />


            </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/off_click"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:clickable="true"
                    android:layout_weight=".30"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/power"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/off"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:id="@+id/pc_status"
                            android:layout_gravity="center"
                            android:textColor="@color/power_off"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_weight=".70"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:id="@+id/sleep_click"
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_margin="10dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/refresh"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sleep"
                            android:layout_gravity="center"
                            android:textSize="30sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/spy_click"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/spy"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Spy Mode"
                            android:textSize="15dp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textIsSelectable="false" />
                        <Switch
                            android:id="@+id/switch_spy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/sadsad_click"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/mouse"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mouse_lock"
                            android:textSize="15dp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textIsSelectable="false" />
                        <Switch
                            android:id="@+id/mouse_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/horn"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/horn"
                            android:textSize="15dp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textIsSelectable="false" />
                        <Switch
                            android:id="@+id/horn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/message_click"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:clickable="true"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/message"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/send_message"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/lock_click"
                    android:layout_gravity="center"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_weight=".33"
                    android:clickable="true"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:background="@drawable/lock"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lock"
                                android:layout_margin="5dp"
                                android:textSize="20dp"
                                android:layout_gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:textIsSelectable="false" />
                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/delete_software_click"
                    card_view:cardBackgroundColor="@color/power_off"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    card_view:cardCornerRadius="15dp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/destroy"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pc_soft_delete"
                            android:layout_margin="5dp"
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:textColor="@android:color/white"
                            android:textIsSelectable="false" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spy_mode_desc"
                android:layout_margin="5dp"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

